3_terraform_create_azure_APIM_deployment/virtual_NIC.tf
resource "azurerm_network_interface" "myterraformnic" {
    name                        = "myNIC"
    location                    = "uksouth"
    resource_group_name         = data.azurerm_resources.myterraformgroup.resource_group_name

    ip_configuration {
        name                          = "myNicConfiguration"
        subnet_id                     = azurerm_subnet.myterraformsubnet.id
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id          = azurerm_public_ip.myterraformpublicip.id
    }

    tags = {
        environment = "Terraform Demo"
    }
}

# Connect the security group to the network interface
resource "azurerm_network_interface_security_group_association" "example" {
    network_interface_id      = azurerm_network_interface.myterraformnic.id
    network_security_group_id = azurerm_network_security_group.myterraformnsg.id
}
